# termfix

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/termfix/: __init__.py  __main__.py  cli.py  config.py
src/termfix/core/: frecency.py  path_utils.py  spellcheck.py  suggest.py
src/termfix/daemon/: manager.py  protocol.py  server.py
src/termfix/db/: database.py
src/termfix/importers/: psreadline.py
src/termfix/shell/: installer.py
src/termfix/shell/cmd/: termfix_hook.cmd
src/termfix/shell/powershell/: termfix_hook.ps1
tests/: conftest.py  test_config.py  test_daemon.py  test_database.py  test_frecency.py  test_path_utils.py  test_protocol.py  test_spellcheck.py  test_suggest.py
