[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termfix"
version = "0.1.0"
description = "Windows terminal assistant: spell correction, frecency directories, fuzzy command suggestions"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Austin Kidwell" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Shells",
]
dependencies = [
    "pywin32>=306",
    "rapidfuzz>=3.0",
    "click>=8.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.urls]
Repository = "https://github.com/intellegix/termfix"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
termfix = "termfix.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/termfix"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
